fix: z-index updated

--- a/src/theme/_cms-ui.scss
+++ b/src/theme/_cms-ui.scss
@@ -750,7 +750,7 @@ body.cms-ui {
 body.has-toolbar {
   #toolbar {
     .toolbar-content.show {
-      z-index: 9;
+      z-index: 501;
     }
     .personal-tools {
       .avatar {
